--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -3,8 +3,8 @@ name: NodeJS with Webpack
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  # pull_request:
+  #   branches: [ "master" ]
 
 jobs:
   build:
@@ -26,3 +26,16 @@ jobs:
       run: |
         npm install
         npx webpack
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
+
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        # Upload entire repository
+        path: './dist'
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
