--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,10 +1,19 @@
-name: NodeJS with Webpack
+name: NodeJS with Webpack and deploy to pages
 
 on:
   push:
     branches: [ "master" ]
   # pull_request:
   #   branches: [ "master" ]
+
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
@@ -35,7 +44,13 @@ jobs:
       with:
         # Upload entire repository
         path: './dist'
-
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
